--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,7 @@ description: Admit nothing, deny everything and make counter-accusations
 
 markdown: redcarpet
 highlighter: pygments
-logo: 'https://avatars.githubusercontent.com/u/4151340?v=3'
+logo: false
 paginate: 15
 baseurl: /
 domain_name: 'http://bedecarroll.github.io'
-
-# Details for the RSS feed generator
-url:            'blog url'
-author:         'Bede Carroll'
