lots of changes as per CHANGELOG.md

--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,17 @@
 baseurl: "" # The subpath of your site. Use "" if you're hosting a blog at the root level.
-url: "http://bedecarroll.github.io" # the base hostname & protocol for your site
+url: "http://bedecarroll.com" # the base hostname & protocol for your site
 title: Bede Carroll
 description: Admit nothing, deny everything and make counter-accusations
 
 author:
     name: "Bede Carroll"
-    twitter: bedecarroll
+    twitter: "bedecarroll"
+    github: "bedecarroll"
+    linkedin: "bedecarroll"
 
 gems:
     - jemoji
+    - jekyll-sitemap
 exclude:
     - "README.md"
     - "CHANGELOG.md"
