--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,9 @@ author:
     linkedin: "bedecarroll"
 
 gems:
+    - jekyll-mentions
     - jemoji
+    - jekyll-redirect-from
     - jekyll-sitemap
 exclude:
     - "README.md"
