--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,10 @@ baseurl: "" # The subpath of your site. Use "" if you're hosting a blog at the r
 url: "http://bedecarroll.com" # the base hostname & protocol for your site
 title: Bede Carroll
 description: Admit nothing, deny everything and make counter-accusations
+# Fix highlighting as per http://stackoverflow.com/questions/16099153/table-not-render-when-use-redcarpet-in-jekyll-github-pages
 markdown: redcarpet
-extensions: [fenced_code_blocks]
+redcarpet:
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
 
 author:
     name: "Bede Carroll"
