--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: Admit nothing, deny everything and make counter-accusations
 # Fix highlighting as per http://stackoverflow.com/questions/16099153/table-not-render-when-use-redcarpet-in-jekyll-github-pages
 markdown: redcarpet
 redcarpet:
-  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data", "strikethrough", "superscript"]
 
 author:
     name: "Bede Carroll"
