--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 baseurl: "" # The subpath of your site. Use "" if you're hosting a blog at the root level.
-url: "http://bedecarroll.com" # the base hostname & protocol for your site
+url: "https://bedecarroll.com" # the base hostname & protocol for your site
 title: Bede Carroll
+name: Bede Carroll
 description: Admit nothing, deny everything and make counter-accusations
 # Fix highlighting as per http://stackoverflow.com/questions/16099153/table-not-render-when-use-redcarpet-in-jekyll-github-pages
 markdown: redcarpet
@@ -18,12 +19,15 @@ gems:
     - jemoji
     - jekyll-redirect-from
     - jekyll-sitemap
+    - jekyll-feed
+
 exclude:
     - "README.md"
     - "CHANGELOG.md"
     - "CNAME"
     - "Gemfile"
     - "Gemfile.lock"
+
 permalink: :title
 defaults:
     -
