Fix _config.yml to allow .well-known for keybase

--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,9 @@ gems:
     - jekyll-sitemap
     - jekyll-feed
 
+include:
+    - ".well-known"
+
 exclude:
     - "README.md"
     - "CHANGELOG.md"
