feat(hugo): remove the need for url in front matter

--- a/hugo.toml
+++ b/hugo.toml
@@ -132,3 +132,7 @@ home = ["HTML", "AMP", "RSS"]
 
 [outputFormats.RSS]
 baseName = "feed"
+
+[permalinks]
+[permalinks.page]
+posts = "/:year/:month/:day/:slug/"
